feat: 集成 AI Text Simplifier 工具
- 替换 Word Counter 为 AI Text Simplifier 工具
- 添加前端组件 (TextSimplifier, ControlPanel, InputSection, OutputSection)
- 添加后端 API 路由 (/api/simplify) 调用 DeepSeek AI
- 支持三档简化等级: 轻度/中度/深度
- 支持关键词保留功能
- 支持导出为 TXT/MD/DOCX 格式
- 完善中英文国际化翻译
- 配置 API 代理 (next.config.js rewrites)

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,3 +15,6 @@ FRONTEND_URL=http://localhost:3000
 # JWT Configuration
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 JWT_EXPIRES_IN=7d
+
+# DeepSeek API (for Text Simplifier tool)
+DEEPSEEK_API_KEY=your_deepseek_api_key
