--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "@heroicons/react": "^2.2.0",
     "axios": "^1.7.0",
     "clsx": "^2.1.0",
+    "docx": "^9.5.1",
+    "file-saver": "^2.0.5",
     "lucide-react": "^0.394.0",
     "next": "^14.2.0",
     "next-intl": "^3.19.0",
@@ -21,6 +23,7 @@
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20.0.0",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
