处理敏感词问题

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ DATABASE_URL="postgresql://username:password@localhost:5432/toolibox"
 
 # JWT Secret (generate a random string)
 JWT_SECRET="your-secret-key-here-change-this"
+JWT_EXPIRES_IN="7d"
 
 # Cloudflare R2 Storage Configuration
 R2_ACCOUNT_ID="your-r2-account-id"
