--- a/frontend/main/package.json
+++ b/frontend/main/package.json
@@ -20,6 +20,7 @@
     "next-intl": "^3.19.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "react-dropzone": "^14.3.8",
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
