添加 backend plugins volume 挂载配置

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 version: '3.8'
 
 services:
-  # Main frontend (导航/首页)
   frontend-main:
     build:
       context: ./frontend/main
@@ -19,7 +18,6 @@ services:
     networks:
       - toolibox-network
 
-  # Main backend (统一后端服务)
   backend-main:
     build:
       context: ./backend
@@ -29,6 +27,8 @@ services:
     restart: always
     ports:
       - "8000:8000"
+    volumes:
+      - ./backend/plugins:/app/plugins
     environment:
       - NODE_ENV=production
       - PORT=8000
