--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - "3000:3000"
     environment:
       - NODE_ENV=production
-      - BACKEND_URL=http://backend-main:8000/api
+      - NEXT_PUBLIC_API_URL=
     depends_on:
       - backend-main
     networks:
